refactor: 사용자 주변 점포 조회 로직 개선 - join 절 이용해 조회 쿼리 개선 및 N+1 문제 해결 - Store 조회 중복 코드 제거 - DTO 필드 타입 수정에 따라 getter 메소드 수정